--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
+
 .App {
   text-align: center;
+  font-size: 150%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+#keypad-grid {
+  width: 15em;
+  height: 20em;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  color: white;
+  background-color: lightgray;
+  grid-gap: 1px;
+  padding: 1px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.keypad {
+  height: 100%;
+  width: 100%;
+  background-color: darkcyan;
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  cursor: pointer;
+  border: none;
+}
+
+.keypad:hover {
+  font-weight: bold;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.keypad:active {
+  scale: 0.97;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#display {
+  grid-column: 1/5;
+  background-color: #333;
+  display:flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 1em;
+}
+
+#clear {
+  grid-column: 1/3;
+  background-color: rgb(228, 148, 0);
+}
+
+#zero {grid-column: 1/3;}
+#one {}
+#two {}
+#three {}
+#four {}
+#five {}
+#six {}
+#seven {}
+#eight {}
+#nine {}
+#decimal {}
+#add {}
+#subtract {}
+#multiply {}
+#divide {}
+#equals {
+  grid-column: 4/5;
+  grid-row: 5/7;
+  background-color: rgb(228, 148, 0);
 }
